feat(landingPage): Ajout premier écran sans news

--- a/firebase.json
+++ b/firebase.json
@@ -23,18 +23,7 @@
     }
   ],
   "hosting": {
-    "public": "build/web",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ],
-    "rewrites": [
-      {
-        "source": "**",
-        "destination": "/index.html"
-      }
-    ]
+    "public": "build/web"
   },
   "storage": {
     "rules": "storage.rules"
