--- a/web/assets/FontManifest.json
+++ b/web/assets/FontManifest.json
@@ -1,9 +1,9 @@
 [
   {
-    "family": "HIROMISAKE",
+    "family": "Hiromisake",
     "fonts": [
       {
-        "asset": "fonts/HIROMISAKE.tff"
+        "asset": "fonts/Hiromisake-Regular.ttf"
       }
     ]
   }
