--- a/.github/workflows/pr-preview.yml
+++ b/.github/workflows/pr-preview.yml
@@ -49,8 +49,8 @@ jobs:
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
-          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_JCS_APP_DA13E }}'
-          projectId: jcs-app-da13e
+          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_JUDOSECLIN_E4B0F }}'
+          projectId: judoseclin-e4b0f
 
       - name: Get Codecov
         run: curl -Os https://uploader.codecov.io/latest/linux/codecov
