--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,11 @@ dependencies:
   cupertino_icons: ^1.0.5
   flutter_markdown: ^0.6.13
   carousel_slider: ^4.2.1
+  bloc: ^8.1.0
+  flutter_bloc: ^8.1.1
+  equatable: ^2.0.5
+  flutter_hooks: ^0.18.5+1
+  freezed: ^2.3.2
 
 dev_dependencies:
   flutter_test:
