--- a/firebase.json
+++ b/firebase.json
@@ -3,6 +3,15 @@
     "source": "functions"
   },
   "hosting": {
-    "public": "build/web"
+    "public": "build/web",
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ]
+  },
+  "storage": {
+    "rules": "storage.rules"
   }
 }
