--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,18 +38,20 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.5
-  flutter_markdown: ^0.6.13
+  flutter_markdown: ^0.6.14
   carousel_slider: ^4.2.1
-  bloc: ^8.1.0
-  flutter_bloc: ^8.1.1
+  bloc: ^8.1.1
+  flutter_bloc: ^8.1.2
   equatable: ^2.0.5
-  flutter_hooks: ^0.18.5+1
+  flutter_hooks: ^0.18.6
   freezed: ^2.3.2
-  firebase_core: ^2.4.1
-  cloud_firestore: ^4.3.1
-  firebase_storage: ^11.0.10
+  firebase_core: ^2.7.1
+  cloud_firestore: ^4.4.4
+  firebase_storage: ^11.0.15
   http: ^0.13.5
-  url_launcher: ^6.1.8
+  url_launcher: ^6.1.10
+  freezed_annotation: ^2.2.0
+  json_annotation: ^4.8.0
 
 dev_dependencies:
   flutter_test:
@@ -61,6 +63,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.1
+  build_runner: ^2.3.3
+  json_serializable: ^6.6.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -79,7 +83,6 @@ flutter:
   #   - images/a_dot_ham.jpeg
   assets:
     - assets/images/
-    - assets/documents/
     - assets/markdown/
 
   # An image asset can refer to one or more resolution-specific "variants", see
