--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -29,6 +29,7 @@ apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
+    namespace "fr.benoitfontaine.judoseclin"
     compileSdkVersion flutter.compileSdkVersion
     ndkVersion flutter.ndkVersion
 
