--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.1.0
 
 environment:
   sdk: '>=2.18.6 <3.0.0'
@@ -33,25 +33,29 @@ dependencies:
     sdk: flutter
   flutter_web_plugins:
     sdk: flutter
+  freelance:
+    git:
+      url: https://github.com/benoit-fontaine/freelance.git
+      ref: main
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.5
-  flutter_markdown: ^0.6.14
+  flutter_markdown: ^0.6.17
   carousel_slider: ^4.2.1
-  bloc: ^8.1.1
-  flutter_bloc: ^8.1.2
+  bloc: ^8.1.2
+  flutter_bloc: ^8.1.3
   equatable: ^2.0.5
-  flutter_hooks: ^0.18.6
-  freezed: ^2.3.2
-  firebase_core: ^2.7.1
-  cloud_firestore: ^4.4.4
-  firebase_storage: ^11.0.15
-  http: ^0.13.5
-  url_launcher: ^6.1.10
-  freezed_annotation: ^2.2.0
-  json_annotation: ^4.8.0
+  flutter_hooks: ^0.20.0
+  freezed: ^2.4.1
+  firebase_core: ^2.15.0
+  cloud_firestore: ^4.8.4
+  firebase_storage: ^11.2.5
+  http: ^1.1.0
+  url_launcher: ^6.1.12
+  freezed_annotation: ^2.4.1
+  json_annotation: ^4.8.1
 
 dev_dependencies:
   flutter_test:
@@ -62,9 +66,9 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.1
-  build_runner: ^2.3.3
-  json_serializable: ^6.6.1
+  flutter_lints: ^2.0.2
+  build_runner: ^2.4.6
+  json_serializable: ^6.7.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
