--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,8 +50,9 @@ dependencies:
   flutter_hooks: ^0.20.0
   freezed: ^2.4.1
   firebase_core: ^2.15.0
-  cloud_firestore: ^4.8.4
+  firebase_auth: ^4.7.2
   firebase_storage: ^11.2.5
+  cloud_firestore: ^4.8.4
   http: ^1.1.0
   url_launcher: ^6.1.12
   freezed_annotation: ^2.4.1
