--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   url_launcher: ^6.1.12
   freezed_annotation: ^2.4.1
   json_annotation: ^4.8.1
+  flutter_spinkit: ^5.2.0
 
 dev_dependencies:
   flutter_test:
