--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,8 @@ dependencies:
   freezed_annotation: ^2.4.1
   json_annotation: ^4.8.1
   flutter_spinkit: ^5.2.0
+  intl: ^0.18.1
+  go_router: ^11.1.3
 
 
 dev_dependencies:
