--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,24 +42,24 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.5
-  flutter_markdown: ^0.6.17
+  flutter_markdown: ^0.6.18+2
   carousel_slider: ^4.2.1
   bloc: ^8.1.2
   flutter_bloc: ^8.1.3
   equatable: ^2.0.5
-  flutter_hooks: ^0.20.0
-  freezed: ^2.4.1
-  firebase_core: ^2.15.0
-  firebase_auth: ^4.7.2
-  firebase_storage: ^11.2.5
-  cloud_firestore: ^4.8.4
+  flutter_hooks: ^0.20.3
+  freezed: ^2.4.5
+  firebase_core: ^2.22.0
+  firebase_auth: ^4.13.0
+  firebase_storage: ^11.5.0
+  cloud_firestore: ^4.13.0
   http: ^1.1.0
-  url_launcher: ^6.1.12
+  url_launcher: ^6.2.1
   freezed_annotation: ^2.4.1
   json_annotation: ^4.8.1
   flutter_spinkit: ^5.2.0
   intl: ^0.18.1
-  go_router: ^11.1.3
+  go_router: ^11.1.4
 
 
 dev_dependencies:
