--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,25 +38,25 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.5
-  flutter_markdown: ^0.6.18+2
+  cupertino_icons: ^1.0.6
+  flutter_markdown: ^0.6.19
   carousel_slider: ^4.2.1
-  bloc: ^8.1.2
-  flutter_bloc: ^8.1.3
+  bloc: ^8.1.3
+  flutter_bloc: ^8.1.4
   equatable: ^2.0.5
-  flutter_hooks: ^0.20.3
-  freezed: ^2.4.5
+  flutter_hooks: ^0.20.5
+  freezed: ^2.4.7
   firebase_core: ^2.25.4
-  firebase_auth: ^4.17.5
-  firebase_storage: ^11.5.0
-  cloud_firestore: ^4.15.5
-  http: ^1.1.0
-  url_launcher: ^6.2.1
+  firebase_auth: ^4.17.4
+  firebase_storage: ^11.6.5
+  cloud_firestore: ^4.15.4
+  http: ^1.2.0
+  url_launcher: ^6.2.4
   freezed_annotation: ^2.4.1
   json_annotation: ^4.8.1
   flutter_spinkit: ^5.2.0
   intl: ^0.18.1
-  go_router: ^13.0.1
+  go_router: ^13.2.0
 
 
 dev_dependencies:
@@ -69,7 +69,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^3.0.1
-  build_runner: ^2.4.6
+  build_runner: ^2.4.8
   json_serializable: ^6.7.1
 
 # For information on the generic Dart part of this file, see the
