correction des icons

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -121,3 +121,8 @@ flutter:
     - family: Hiromisake
       fonts:
         - asset: fonts/Hiromisake-Regular.ttf
+
+    - family: MaterialIcons
+      fonts:
+       - asset: fonts/MaterialIcons-Regular.ttf
+
