--- a/web/assets/FontManifest.json
+++ b/web/assets/FontManifest.json
@@ -6,5 +6,13 @@
         "asset": "fonts/Hiromisake-Regular.ttf"
       }
     ]
+  },
+  {
+    "family": "MaterialIcons",
+    "fonts": [
+      {
+        "asset": "fonts/MaterialIcons-Regular.ttf"
+      }
+    ]
   }
 ]
