--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,8 @@ dependencies:
   flutter_spinkit: ^5.2.0
   intl: ^0.18.1
   go_router: ^13.2.0
+  injectable: ^2.3.2
+  get_it: ^7.6.7
 
 
 dev_dependencies:
@@ -71,6 +73,7 @@ dev_dependencies:
   flutter_lints: ^3.0.1
   build_runner: ^2.4.8
   json_serializable: ^6.7.1
+  injectable_generator: ^2.4.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
