--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -121,11 +121,10 @@ flutter:
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
   fonts:
+    - family: MaterialIcons
+      fonts:
+        - asset: fonts/MaterialIcons-Regular.otf
     - family: Hiromisake
       fonts:
         - asset: fonts/Hiromisake-Regular.ttf
-
-    - family: MaterialIcons
-      fonts:
-       - asset: fonts/MaterialIcons-Regular.ttf
 
