--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.1.0
 
 environment:
-  sdk: '>=3.1.0 <4.0.0'
+  sdk: '>=3.2.0-0 <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -39,25 +39,25 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-  flutter_markdown: ^0.6.19
+  flutter_markdown: ^0.6.21
   carousel_slider: ^4.2.1
   bloc: ^8.1.3
   flutter_bloc: ^8.1.4
   equatable: ^2.0.5
   flutter_hooks: ^0.20.5
   freezed: ^2.4.7
-  firebase_core: ^2.25.4
-  firebase_auth: ^4.17.4
-  firebase_storage: ^11.6.5
-  cloud_firestore: ^4.15.4
-  http: ^1.2.0
-  url_launcher: ^6.2.4
+  firebase_core: ^2.27.1
+  firebase_auth: ^4.17.9
+  firebase_storage: ^11.6.10
+  cloud_firestore: ^4.15.9
+  http: ^1.2.1
+  url_launcher: ^6.2.5
   freezed_annotation: ^2.4.1
   json_annotation: ^4.8.1
   flutter_spinkit: ^5.2.0
   intl: ^0.18.1
   go_router: ^13.2.0
-  injectable: ^2.3.2
+  injectable: ^2.4.0
   get_it: ^7.6.7
 
 
@@ -73,10 +73,13 @@ dev_dependencies:
   flutter_lints: ^3.0.1
   build_runner: ^2.4.8
   json_serializable: ^6.7.1
-  injectable_generator: ^2.4.1
+  injectable_generator: ^2.6.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
+
+dependency_overrides:
+  meta: 1.12.0
 
 # The following section is specific to Flutter packages.
 flutter:
