--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -3,43 +3,43 @@ description: "Cette application vous permet de suivre l'actualité du club mais 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
-version: 1.0.0+17
+version: 1.0.0+18
 
 environment:
-  sdk: '>=3.3.2 <4.0.0'
+  sdk: '>=3.4.3 <4.0.0'
+  flutter: ">=3.22.2"
 
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.6
-  freelance: ^1.0.0+8
-  flutter_markdown: ^0.6.22
+  cupertino_icons: ^1.0.8
+  freelance: ^1.0.1
+  flutter_markdown: ^0.7.2+1
   carousel_slider: ^4.2.1
-  flutter_bloc: ^8.1.4
+  flutter_bloc: ^8.1.6
   equatable: ^2.0.5
-  freezed: ^2.4.7
-  flutter_hooks: ^0.18.6
-  firebase_core: ^2.27.1
-  firebase_auth: ^4.17.9
-  firebase_storage: ^11.6.10
-  cloud_firestore: ^4.15.9
+  flutter_hooks: ^0.20.5
+  firebase_core: ^3.1.1
+  firebase_auth: ^5.1.1
+  firebase_storage: ^12.1.0
+  cloud_firestore: ^5.0.2
   http: ^1.2.1
-  url_launcher: ^6.2.5
+  url_launcher: ^6.3.0
   freezed_annotation: ^2.4.1
-  json_annotation: ^4.8.1
-  flutter_spinkit: ^5.2.0
-  intl: ^0.18.1
-  go_router: ^13.2.1
-  injectable: ^2.3.5
-  get_it: ^7.6.7
+  json_annotation: ^4.9.0
+  flutter_spinkit: ^5.2.1
+  intl: ^0.19.0
+  go_router: ^14.2.0
+  injectable: ^2.4.2
+  get_it: ^7.7.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.1
-  build_runner: ^2.4.8
-  json_serializable: ^6.7.1
-  injectable_generator: ^2.5.1
+  flutter_lints: ^4.0.0
+  build_runner: ^2.4.11
+  json_serializable: ^6.8.0
+  injectable_generator: ^2.6.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
