--- a/.github/workflows/code-analysis.yml
+++ b/.github/workflows/code-analysis.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.19.0'
+          flutter-version: '3.22.2'
           channel: 'stable'
       - run: flutter --version
 
@@ -26,25 +26,11 @@ jobs:
           restore-keys: ${{ runner.os }}-pub-
 
       - name: Run clean
-        run: flutter clean
+        run: |
+          cd app
+          flutter clean
 
       - name: Download pub dependencies
-        run: flutter pub get
-
-      - name: Run analyzer
-        run: flutter analyze
-
-      - name: Run tests
-        run: flutter test --coverage
-
-      - name: Get Codecov
-        run: curl -Os https://uploader.codecov.io/latest/linux/codecov
-        shell: bash
-
-      - name: Chmod shell
-        run: chmod +x codecov
-        shell: bash
-
-      - name: Upload coverage
-        run: ./codecov
-        shell: bash
+        run: |
+          cd app
+          flutter pub get
