--- a/.github/workflows/pr-preview.yml
+++ b/.github/workflows/pr-preview.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.19.0'
+          flutter-version: '3.22.2'
           channel: 'stable'
       - run: flutter --version
 
@@ -26,40 +26,28 @@ jobs:
           restore-keys: ${{ runner.os }}-pub-
 
       - name: Run clean
-        run: flutter clean
+        run: |
+          cd app
+          flutter clean
 
       - name: Download pub dependencies
-        run: flutter pub get
-
-      - name: Run analyzer
-        run: flutter analyze
-
-      - name: Run tests
-        run: flutter test --coverage
+        run: |
+          cd app
+          flutter pub get
 
       - name: Build Web App
-        run: flutter build web --base-href=/
+        run: |
+          cd app
+          flutter build web --base-href=/
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
           # Upload entire repository
-          path: './build/web'
+          path: './app/build/web'
 
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_JUDOSECLIN_E4B0F }}'
           projectId: judoseclin-e4b0f
-
-      - name: Get Codecov
-        run: curl -Os https://uploader.codecov.io/latest/linux/codecov
-        shell: bash
-
-      - name: Chmod shell
-        run: chmod +x codecov
-        shell: bash
-
-      - name: Upload coverage
-        run: ./codecov
-        shell: bash
