--- a/.github/workflows/website-deploy.yml
+++ b/.github/workflows/website-deploy.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.19.0'
+          flutter-version: '3.22.2'
           channel: 'stable'
       - run: flutter --version
 
@@ -34,25 +34,24 @@ jobs:
           restore-keys: ${{ runner.os }}-pub-
 
       - name: Run clean
-        run: flutter clean
+        run: |
+          cd app
+          flutter clean
 
       - name: Download pub dependencies
-        run: flutter pub get
-
-      - name: Run analyzer
-        run: flutter analyze
-
-      - name: Run tests
-        run: flutter test
+        run: |
+          cd app
+          flutter pub get
 
       - name: Build Web App
-        run: flutter build web --base-href=/ --release
+        run: |
+          cd app
+          flutter build web --base-href=/ --release
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
-          # Upload entire repository
-          path: './build/web'
+          path: './app/build/web'
 
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
