--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -13,24 +13,24 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.8
-  freelance: ^1.0.1
-  flutter_markdown: ^0.7.2+1
+  freelance: ^1.0.2
+  flutter_markdown: ^0.7.3
   carousel_slider: ^4.2.1
   flutter_bloc: ^8.1.6
   equatable: ^2.0.5
   flutter_hooks: ^0.20.5
-  firebase_core: ^3.1.1
-  firebase_auth: ^5.1.1
-  firebase_storage: ^12.1.0
-  cloud_firestore: ^5.0.2
-  http: ^1.2.1
+  firebase_core: ^3.3.0
+  firebase_auth: ^5.1.3
+  firebase_storage: ^12.1.2
+  cloud_firestore: ^5.2.0
+  http: ^1.2.2
   url_launcher: ^6.3.0
-  freezed_annotation: ^2.4.1
+  freezed_annotation: ^2.4.4
   json_annotation: ^4.9.0
   flutter_spinkit: ^5.2.1
   intl: ^0.19.0
-  go_router: ^14.2.0
-  injectable: ^2.4.2
+  go_router: ^14.2.3
+  injectable: ^2.4.4
   get_it: ^7.7.0
 
 dev_dependencies:
@@ -39,7 +39,7 @@ dev_dependencies:
   flutter_lints: ^4.0.0
   build_runner: ^2.4.11
   json_serializable: ^6.8.0
-  injectable_generator: ^2.6.1
+  injectable_generator: ^2.6.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
