--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,30 +33,30 @@ dependencies:
     sdk: flutter
   flutter_web_plugins:
     sdk: flutter
-  freelance: ^1.0.0+7
+  freelance: ^1.0.2
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-  flutter_markdown: ^0.6.19
+  flutter_markdown: ^0.7.3
   carousel_slider: ^4.2.1
   bloc: ^8.1.3
   flutter_bloc: ^8.1.4
   equatable: ^2.0.5
   flutter_hooks: ^0.20.5
   freezed: ^2.4.7
-  firebase_core: ^2.25.4
-  firebase_auth: ^4.17.4
-  firebase_storage: ^11.6.5
-  cloud_firestore: ^4.15.4
+  firebase_core: ^3.3.0
+  firebase_auth: ^5.1.4
+  firebase_storage: ^12.1.2
+  cloud_firestore: ^5.2.1
   http: ^1.2.0
   url_launcher: ^6.2.4
   freezed_annotation: ^2.4.1
   json_annotation: ^4.8.1
   flutter_spinkit: ^5.2.0
-  intl: ^0.18.1
-  go_router: ^13.2.0
+  intl: ^0.19.0
+  go_router: ^14.2.3
 
 
 dev_dependencies:
