--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -11,27 +11,27 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.6
-  freelance: ^1.0.0+8
-  flutter_markdown: ^0.6.22
+  cupertino_icons: ^1.0.8
+  freelance: ^1.0.2
+  flutter_markdown: ^0.7.3
   carousel_slider: ^4.2.1
-  flutter_bloc: ^8.1.4
+  flutter_bloc: ^8.1.6
   equatable: ^2.0.5
-  freezed: ^2.4.7
+  freezed: ^2.5.2
   flutter_hooks: ^0.18.6
-  firebase_core: ^2.27.1
-  firebase_auth: ^4.17.9
-  firebase_storage: ^11.6.10
-  cloud_firestore: ^4.15.9
-  http: ^1.2.1
-  url_launcher: ^6.2.5
-  freezed_annotation: ^2.4.1
-  json_annotation: ^4.8.1
-  flutter_spinkit: ^5.2.0
-  intl: ^0.18.1
-  go_router: ^13.2.1
-  injectable: ^2.3.5
-  get_it: ^7.6.7
+  firebase_core: ^3.3.0
+  firebase_auth: ^5.1.4
+  firebase_storage: ^12.1.3
+  cloud_firestore: ^5.2.1
+  http: ^1.2.2
+  url_launcher: ^6.3.0
+  freezed_annotation: ^2.4.4
+  json_annotation: ^4.9.0
+  flutter_spinkit: ^5.2.1
+  intl: ^0.19.0
+  go_router: ^14.2.3
+  injectable: ^2.4.4
+  get_it: ^7.7.0
 
 dev_dependencies:
   flutter_test:
