--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -7,7 +7,7 @@ version: 1.0.0+18
 
 environment:
   sdk: '>=3.6.0 <4.0.0'
-  flutter: ">=3.27.3"
+  flutter: ">=3.27.3 <3.28.0"
 
 dependencies:
   flutter:
