--- a/app/android/local.properties
+++ b/app/android/local.properties
@@ -1,2 +1,2 @@
-sdk.dir=/Users/ludovic.spysschaert/Library/Android/sdk
-flutter.sdk=/usr/local/Caskroom/flutter/3.13.0/flutter
+sdk.dir=/home/ludo/Android/Sdk
+flutter.sdk=/home/ludo/snap/flutter/common/flutter
