--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -33,6 +33,10 @@ dependencies:
   go_router: ^14.2.3
   injectable: ^2.4.4
   get_it: ^7.7.0
+  cloud_functions: ^5.3.2
+  provider: ^6.1.2
+  pdf: ^3.11.3
+  universal_html: ^2.2.4
 
 dev_dependencies:
   flutter_test:
@@ -59,3 +63,7 @@ flutter:
     - family: Hiromisake
       fonts:
         - asset: fonts/Hiromisake-Regular.ttf
+    - family: Roboto
+      fonts:
+        - asset: fonts/Roboto-Regular.ttf
+        - asset: font/Roboto-Bold.ttf
