--- a/functions/package.json
+++ b/functions/package.json
@@ -1,6 +1,5 @@
 {
   "name": "functions",
-  "description": "Cloud Functions for Firebase",
   "scripts": {
     "lint": "eslint --ext .js,.ts .",
     "build": "tsc",
@@ -15,18 +14,19 @@
   },
   "main": "lib/index.js",
   "dependencies": {
-    "firebase-admin": "^12.0.0",
-    "firebase-functions": "^5.0.0",
-    "nodemailer": "^6.9.10"
+    "firebase-admin": "^11.8.0",
+    "firebase-functions": "^6.3.2",
+    "nodemailer": "^6.10.0"
   },
   "devDependencies": {
-    "@types/nodemailer": "^6.4.14",
-    "@typescript-eslint/eslint-plugin": "^7.0.0",
-    "@typescript-eslint/parser": "^7.0.0",
-    "eslint": "^8.56.0",
+    "@types/nodemailer": "^6.4.17",
+    "@typescript-eslint/eslint-plugin": "^5.12.0",
+    "@typescript-eslint/parser": "^5.12.0",
+    "eslint": "^8.9.0",
     "eslint-config-google": "^0.14.0",
-    "eslint-plugin-import": "^2.29.1",
-    "typescript": "^5.3.0"
+    "eslint-plugin-import": "^2.25.4",
+    "firebase-functions-test": "^3.1.0",
+    "typescript": "^4.9.0"
   },
   "private": true
 }
