--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -1,14 +1,12 @@
 {
   "compilerOptions": {
     "module": "commonjs",
-    "esModuleInterop": true,
-    "target": "es2020",
-    "moduleResolution": "node",
-    "sourceMap": true,
+    "noImplicitReturns": true,
+    "noUnusedLocals": true,
     "outDir": "lib",
+    "sourceMap": true,
     "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "skipLibCheck": true
+    "target": "es2020"
   },
   "compileOnSave": true,
   "include": [
