--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   provider: ^6.1.2
   pdf: ^3.11.3
   universal_html: ^2.2.4
+  printing: ^5.14.2
 
 dev_dependencies:
   flutter_test:
@@ -67,3 +68,7 @@ flutter:
       fonts:
         - asset: assets/fonts/Roboto-Regular.ttf
         - asset: assets/fonts/Roboto-Bold.ttf
+    - family: NotoColorsEmoji
+      fonts:
+        - asset: assets/fonts/NotoColorEmoji-regular.ttf
+
