--- a/app/android/local.properties
+++ b/app/android/local.properties
@@ -1,2 +1,2 @@
-sdk.dir=/Users/bfontaine/Library/Android/sdk
-flutter.sdk=/Users/bfontaine/flutter
+sdk.dir=/home/ludo/Android/Sdk
+flutter.sdk=/home/ludo/flutter
