--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -6,8 +6,8 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+18
 
 environment:
-  sdk: '>=3.6.0 <4.0.0'
-  flutter: ">=3.27.3 <3.28.0"
+  sdk: ">=3.5.0 <4.0.0"
+  flutter: ">=3.24.0 <4.0.0"
 
 dependencies:
   flutter:
@@ -17,22 +17,22 @@ dependencies:
   carousel_slider: ^5.0.0
   flutter_bloc: ^9.0.0
   equatable: ^2.0.5
-  freezed: ^2.5.2
-  flutter_hooks: ^0.20.5
-  firebase_core: ^3.3.0
-  firebase_auth: ^5.1.4
-  firebase_storage: ^12.1.3
-  cloud_firestore: ^5.2.1
+  freezed: ^3.1.0
+  flutter_hooks: ^0.21.2
+  firebase_core: ^4.1.0
+  firebase_auth: ^6.0.2
+  firebase_storage: ^13.0.1
+  cloud_firestore: ^6.0.1
   http: ^1.3.0
   url_launcher: ^6.3.0
-  freezed_annotation: ^2.4.4
+  freezed_annotation: ^3.1.0
   json_annotation: ^4.9.0
   flutter_spinkit: ^5.2.1
   intl: ^0.20.2
-  go_router: ^14.2.3
+  go_router: ^16.2.1
   injectable: ^2.4.4
   get_it: ^8.0.3
-  cloud_functions: ^5.3.2
+  cloud_functions: ^6.0.1
   provider: ^6.1.2
   pdf: ^3.11.3
   universal_html: ^2.2.4
