--- a/app/android/local.properties
+++ b/app/android/local.properties
@@ -1,5 +1,5 @@
-sdk.dir=/Users/ludovic.spysschaert/Library/Android/sdk
-flutter.sdk=/usr/local/Caskroom/flutter/3.13.0/flutter
+sdk.dir=/home/ludo/Android/Sdk
+flutter.sdk=/home/ludo/flutter
 flutter.buildMode=debug
 flutter.versionName=1.0.0
 flutter.versionCode=18
