--- a/app/macos/Flutter/ephemeral/Flutter-Generated.xcconfig
+++ b/app/macos/Flutter/ephemeral/Flutter-Generated.xcconfig
@@ -1,10 +1,11 @@
 // This is a generated file; do not edit or check into version control.
-FLUTTER_ROOT=/usr/local/Caskroom/flutter/3.13.0/flutter
-FLUTTER_APPLICATION_PATH=/Users/ludovic.spysschaert/Documents/Developpements/judoseclin/app
+FLUTTER_ROOT=/home/ludo/flutter
+FLUTTER_APPLICATION_PATH=/home/ludo/Documents/dev/judoseclin/app
 COCOAPODS_PARALLEL_CODE_SIGN=true
 FLUTTER_BUILD_DIR=build
 FLUTTER_BUILD_NAME=1.0.0
 FLUTTER_BUILD_NUMBER=18
+FLUTTER_CLI_BUILD_MODE=debug
 DART_OBFUSCATION=false
 TRACK_WIDGET_CREATION=true
 TREE_SHAKE_ICONS=false
