refactor: Update dependencies

--- a/app/android/local.properties
+++ b/app/android/local.properties
@@ -1,5 +1,5 @@
-sdk.dir=/home/ludo/Android/Sdk
-flutter.sdk=/home/ludo/flutter
+sdk.dir=/Users/bfontaine/Library/Android/sdk
+flutter.sdk=/Users/bfontaine/flutter
 flutter.buildMode=debug
 flutter.versionName=1.0.0
 flutter.versionCode=18
