--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -11,27 +11,27 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.8
-  flutter_markdown: ^0.7.3
-  carousel_slider: ^5.0.0
-  flutter_bloc: ^9.0.0
-  equatable: ^2.0.5
-  freezed: ^3.1.0
-  flutter_hooks: ^0.21.2
+  flutter_markdown: ^0.7.7+1
+  carousel_slider: ^5.1.1
+  flutter_bloc: ^9.1.1
+  equatable: ^2.0.7
+  freezed: ^3.2.0
+  flutter_hooks: ^0.21.3+1
   firebase_core: ^4.1.0
   firebase_auth: ^6.0.2
   firebase_storage: ^13.0.1
   cloud_firestore: ^6.0.1
-  http: ^1.3.0
-  url_launcher: ^6.3.0
+  http: ^1.5.0
+  url_launcher: ^6.3.2
   freezed_annotation: ^3.1.0
   json_annotation: ^4.9.0
-  flutter_spinkit: ^5.2.1
+  flutter_spinkit: ^5.2.2
   intl: ^0.20.2
   go_router: ^16.2.1
-  injectable: ^2.4.4
-  get_it: ^8.0.3
+  injectable: ^2.5.1
+  get_it: ^8.2.0
   cloud_functions: ^6.0.1
-  provider: ^6.1.2
+  provider: ^6.1.5+1
   pdf: ^3.11.3
   universal_html: ^2.2.4
   printing: ^5.14.2
@@ -43,10 +43,10 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
-  build_runner: ^2.4.11
-  json_serializable: ^6.8.0
-  injectable_generator: ^2.6.2
+  flutter_lints: ^6.0.0
+  build_runner: ^2.7.1
+  json_serializable: ^6.11.1
+  injectable_generator: ^2.8.1
 
 flutter:
   uses-material-design: true
