--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -4,8 +4,8 @@ publish_to: 'none'
 version: 1.0.0+18
 
 environment:
-  sdk: ">=3.5.0 <4.0.0"
-  flutter: ">=3.24.0 <4.0.0"
+  sdk: ^3.9.0
+resolution: workspace
 
 dependencies:
   flutter:
